import co.edu.uptc.gui.VentanaPrincipal;

public class Main{
	public static void main (String[] args){
		new VentanaPrincipal();
	}
}
