package co.edu.uptc.modelo;

public enum ROLES{
	REGULAR, PREMIUM, ADMIN
}
